@@ -1,4 +1,5 @@
 0.03
+ - Add doc for Kramerius object.
  - Add test for Kramerius url() method.
  - Move MARC::Convert::Wikidata::Object::Utils to Mo::utils::Date.
 
